refactor: padroniza e melhora o MedicalRecordController com comentários e validações