@@ -1,7 +1,9 @@
 package br.fai.lds.medlink.controller;
 
 import br.fai.lds.medlink.domain.MedicalRecord;
+import br.fai.lds.medlink.domain.dataTransferObject.MedicalRecordDto;
 import br.fai.lds.medlink.port.service.medicalRecordService.MedicalRecordService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -9,57 +11,45 @@ import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
-//Gera automaticamente um construtor com os argumentos obrigatorios, no caso final
 @RequiredArgsConstructor
-//Retorno dos metodos e converte para JSON
 @RestController
-//Define os edpoint para todas as rotas
 @RequestMapping("/api/medical-record")
-
 public class MedicalRecordController {
 
     private final MedicalRecordService medicalRecordService;
 
+   //Retorna a lista de todos os prontuários médicos.
 
-    /**
-     * GET: Chama o service para buscar todos os prontuarios(findAll())
-     * Converte cada entidade para um DTO
-     */
     @GetMapping
     public ResponseEntity<List<MedicalRecordDto>> getAll() {
         List<MedicalRecord> entities = medicalRecordService.findAll();
-
-        List<MedicalRecordDto> dto = entities
-                .stream()
+        List<MedicalRecordDto> dtos = entities.stream()
                 .map(MedicalRecordDto::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
 
-        return ResponseEntity.ok(dto);
+        return ResponseEntity.ok(dtos);
     }
-    /**
-     *GET: Chama o service para buscar um prontuario especifico, definido pela rota "/{id}"
-     *PathVariable: Pega o valor  da URL {id} e atribui a variavel int
-     *findById é o responsável por chamar o service para fazer a busca do prontuario
-     *Se encontrar transforma em DTO e retorna um objeto 201,
-     *Se não encontrar retorn 404
-     */
+
+
+    //Retorna um prontuário médico pelo ID.
+
     @GetMapping("/{id}")
     public ResponseEntity<MedicalRecordDto> getById(@PathVariable int id) {
         MedicalRecord entity = medicalRecordService.findById(id);
         if (entity == null) {
             return ResponseEntity.notFound().build();
         }
-        
         MedicalRecordDto dto = MedicalRecordDto.fromEntity(entity);
         return ResponseEntity.ok(dto);
     }
-    /**
-    *Responsável por criar um novo prontuario
-    *Converte o DTO recebido atraves da requisicao em uma entidade
-    */
+
+
+    //Cria um novo prontuário médico.
+
     @PostMapping
-    public ResponseEntity<MedicalRecordDto> create(@RequestBody MedicalRecordDto dto) {
+    public ResponseEntity<MedicalRecordDto> create(@Valid @RequestBody MedicalRecordDto dto) {
         MedicalRecord entity = dto.toEntity();
         int id = medicalRecordService.create(entity);
         dto.setId(id);
@@ -72,15 +62,12 @@ public class MedicalRecordController {
 
         return ResponseEntity.created(location).body(dto);
     }
-    /**
-     * Atualiza um prontuario médico já existente
-     * Converte o DTO recebido em uma entidade de dominio
-     * Salva no banco,
-     * Se retornar null é que o Id passado pela rota não existe
-     * Se retornar 200 é que o prontuario foi encontrado e atualizado
-     */
+
+
+    //Atualiza um prontuário médico existente.
+
     @PutMapping("/{id}")
-    public ResponseEntity<MedicalRecordDto> update(@PathVariable int id, @RequestBody MedicalRecordDto dto) {
+    public ResponseEntity<MedicalRecordDto> update(@PathVariable int id, @Valid @RequestBody MedicalRecordDto dto) {
         MedicalRecord entity = dto.toEntity();
         MedicalRecord updated = medicalRecordService.update(id, entity);
 
@@ -89,16 +76,13 @@ public class MedicalRecordController {
         }
         MedicalRecordDto updatedDto = MedicalRecordDto.fromEntity(updated);
         return ResponseEntity.ok(updatedDto);
-
     }
 
-    /**
-     * Deleta um prontuario
-     */
+    //Desativa (deleta) um prontuário médico pelo ID.
+
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deactivate(@PathVariable int id) {
         boolean deleted = medicalRecordService.delete(id);
         return deleted ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
     }
 }
-
